KS8/inventory-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-deploy
spec:
  selector:
    matchLabels:
      app: inventoryservice
  template:
    metadata:
      labels:
        app: inventoryservice
    spec:
      containers:
      - name: inventoryservice
        image: bazedy/inventoryservice:v2.0
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: inventoryservice
  ports:
    - name: inventoryservice
      protocol: TCP
      port: 8080
      targetPort: 8080
