KS8/nodeports-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: paymentnpsrv
spec:
  type: NodePort
  selector:
    app: paymentservice
  ports:
    - name: paymentservice
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ordernpsrv
spec:
  type: NodePort
  selector:
    app: orderworker
  ports:
    - name: orderworker
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: inventorynpsrv
spec:
  type: NodePort
  selector:
    app: inventoryservice
  ports:
    - name: inventoryservice
      protocol: TCP
      port: 8080
      targetPort: 8080
