KS8/order-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deploy
spec:
  selector:
    matchLabels:
      app: orderworker
  template:
    metadata:
      labels:
        app: orderworker
    spec:
      containers:
      - name: orderworker
        image: bazedy/orderworker:v5.0
---
apiVersion: v1
kind: Service
metadata:
  name: order-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: orderworker
  ports:
    - name: orderworker
      protocol: TCP
      port: 8080
      targetPort: 8080
