KS8/payment-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deploy
spec:
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      containers:
      - name: paymentservice
        image: bazedy/paymentservice:v2.0
---
apiVersion: v1
kind: Service
metadata:
  name: payment-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: paymentservice
  ports:
    - name: paymentservice
      protocol: TCP
      port: 8080
      targetPort: 8080
